gap fix

--- a/css/main.css
+++ b/css/main.css
@@ -289,7 +289,7 @@
 
 .navdropdown {
   display: flex;
-  gap: 2px;
+  gap: 4px;
   flex-wrap: wrap;
   padding: 1rem;
   position: absolute;
