--- a/sass/components/navdropdown.scss
+++ b/sass/components/navdropdown.scss
@@ -135,7 +135,7 @@
 
 .navdropdown {
   display: flex;
-  gap: 2px;
+  gap: 4px;
   flex-wrap: wrap;
   padding: 1rem;
   position: absolute;
